// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop styles should render with default styles when not visible 1`] = `
.circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #000000;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
  class="circuit-0 circuit-1"
/>
`;

exports[`Backdrop styles should render with default styles when visible 1`] = `
.circuit-0 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: #000000;
  -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 700;
  visibility: visible;
  opacity: 0.56;
}

@media (min-width:960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<div
  class="circuit-0 circuit-1"
/>
`;
